--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "validate": "pnpm run lint && pnpm run format && pnpm run typecheck && pnpm run test:run"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.1.5",
@@ -47,7 +48,8 @@
     "@eslint/eslintrc": "^3",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^20",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^22.12.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitest/ui": "^3.2.4",
