--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-markdown": "^9.0.3",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
