--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@tanstack/react-virtual": "^3.13.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
@@ -37,6 +38,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-markdown": "^9.0.3",
+    "react-virtual\n": "link:@tanstack/react-virtual\n",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
@@ -57,6 +59,7 @@
     "@vitest/ui": "^3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "jsdom": "^27.0.0",
     "postcss": "^8",
     "prettier": "3.4.2",
