--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "validate": "pnpm run lint && pnpm run format && pnpm run typecheck && pnpm run test:run"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^16.0.3",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-icons": "^1.3.2",
@@ -58,8 +59,7 @@
     "@types/react-dom": "^19",
     "@vitest/ui": "^3.2.4",
     "eslint": "^9",
-    "eslint-config-next": "15.2.3",
-    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-config-next": "^16.0.3",
     "jsdom": "^27.0.0",
     "postcss": "^8",
     "prettier": "3.4.2",
