--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "validate": "pnpm run lint && pnpm run format && pnpm run typecheck && pnpm run test:run"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.936.0",
+    "@aws-sdk/s3-request-presigner": "^3.936.0",
     "@next/eslint-plugin-next": "^16.0.3",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.5",
